# ROST_BOT

./: .gitignore  README.md
control/: AGENTS.md  package.xml  setup.py
control/control/: gripper_drl_controller.py  moving_test.py  pos.py  recycle.py  recycle_demo.py  recycle_new.py
control/control/nodes/: control_node.py  control_server.py
control/control/utils/: recycle_new.py
estimation/: setup.py
estimation/estimation/: core.py
estimation/estimation/nodes/: estimation_node.py  estimation_server.py  judge_node.py
estimation/estimation/utils/: logic.py  prompt.py
estimation/estimation_judge/estimation_judge/: judge_node.py  prompt.py  utils.py
perception/: CMakeLists.txt  package.xml  setup.py
perception/perception/final/: coordinate.py  detector.py  pipeline.py
perception/perception/nodes/: perception_node.py
perception/perception/utils/: click_points.py  coordinate.py  detector.py  pipeline.py  realsense_loop.py
perception/perception/utils/outputs/: depth.npy
perception/srv/: to_estimation.srv
robot_system_bringup/: package.xml  setup.cfg  setup.py
robot_system_bringup/launch/: system.launch.py
robot_system_bringup/robot_system_bringup/: main.py
rost_interfaces/: CMakeLists.txt  package.xml
rost_interfaces/srv/: EstimationToControl.srv
